[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/client_node.gd" type="Script" id=1]

[node name="client_2dnode" type="Node2D"]
script = ExtResource( 1 )

[node name="connect_button" type="Button" parent="."]
margin_left = 338.0
margin_top = 121.0
margin_right = 488.0
margin_bottom = 172.0
text = "connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disconnect_button" type="Button" parent="."]
margin_left = 336.0
margin_top = 233.0
margin_right = 489.0
margin_bottom = 283.0
text = "disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_label" type="Label" parent="."]
margin_left = 539.0
margin_top = 120.0
margin_right = 664.0
margin_bottom = 157.0
text = "Heyy I'm a label"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="connect_button" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="disconnect_button" to="." method="_on_disconnect_button_pressed"]
